<resources>
    <string name="app_name">ProyectoUdeAWinningApp</string>
    <string name="Titulo3">Plaza España</string>
    <string name="descripcion">Descripcion:</string>
    <string name="datos_descripcion3">La Plaza de España es un grupo de obras de arquitectura, fue construida por el arquitecto Aníbal González desde 1914 y 1929 como la edificación primordial y de mayor extensión, de la Exposición Iberoamericana de 1929. Es una enorme plaza rodeada por un estanque semicircular y este a su vez por un edificio con una torre en cada extremo. Es de estilo regionalista, es decir, se basa en elementos típicos de la arquitectura sevillana, por eso el ladrillo visto es el principal elemento constructivo y su decoración se centra en el revestimiento cerámico. </string>
    <string name="ubicacion">Ubicacion:</string>
    <string name="datos_ubicacion3">Estás situado en el parque de María Luisa de la ciudad de Sevilla, España.</string>
    <string name="temperatura">Temperatura:</string>
    <string name="datos_temperatura3">La temperatura varía entre 6 °C hasta 17 °C</string>
    <string name="sitios_recomendados">Sitios recomendados:</string>
    <string name="datos_sitios_recomendados3">Casa jacinto, club allard, charca, faborit, tradicion.</string>

    <string name="Titulo2">Setas de sevilla</string>
    <string name="datos_descripcion2">A primera vista, es evidente que no estamos ante un diseño convencional. El proyecto, también denominado de forma oficial desde su apertura como Setas de Sevilla es una estructura en forma de pérgola de madera y hormigón ubicada en la céntrica plaza de la Encarnación de la ciudad de Sevilla. La obra, compuesta principalmente de madera laminada, está formada por una gran retícula en forma de parasol sostenida sobre seis pilares que abarcan tanto la plaza de la Encarnación como la Plaza Mayor de la ciudad. Antiguamente, la Plaza de la Encarnación albergaba el mercado del mismo nombre, el cual fue construido durante el siglo XIX</string>
    <string name="datos_ubicacion2">Esta obra está ubicada entre la plaza de la Encarnación y la plaza mayor de Sevilla, España.</string>
    <string name="sitios_recomendados2">Sitios recomendados:</string>
    <string name="datos_sitios_recomendados2">Museo Antiquarium, La torre de oro, la Giralda</string>
    <string name="Titulo4">Iglesia san luis de los franceses</string>
    <string name="datos_descripcion4">Construida en el s. XVIII, se trata de uno de los mejores ejemplos de arquitectura barroca en Sevilla. Fue diseñado por el arquitecto Leonardo de Figueroa y construido entre 1699 y 1730 por encargo de la Compañía de Jesús. Destaca en su interior el retablo y la cripta. La entrada general es de 4 euros, aunque hay numerosos descuentos. Los sevillanos pagan solamente un euro y las visitas de grupo, dos euros por persona.</string>
    <string name="datos_ubicacion4">Esta iglesia se encuentra ubicada en el número 27 de la calle San Luis, dividiendo los barrios de la Feria y San Julián en Sevilla, España.</string>
    <string name="datos_sitios_recomendados4">Capilla doméstica, Cripta, Nave principal y cúpula.</string>
    <string name="Titulo5">Reales Alcazares</string>
    <string name="datos_descripcion5">El Real Alcázar de Sevilla es un conjunto palaciego amurallado construido en diferentes etapas históricas. El palacio original se edificó en la Alta Edad Media. Se conservan algunos vestigios de arte islámico y, de la etapa posterior a la conquista castellana, un espacio palaciego mudéjar y otro de estilo gótico. En reformas posteriores se añadieron elementos renacentistas, manieristas y barrocos.</string>
    <string name="datos_sitios_recomendados5">Bar Timbre, Arabesca Restaurant, Rincon de Beirut</string>
    <string name="datos_ubicacion5">Patio de Banderas, s/n, 41004 Sevilla, España</string>
    <string name="Titulo6">Parque de María Luisa </string>
    <string name="datos_descripcion6">No hace falta disponer de mucho tiempo para recorrer los jardines más conocidos y queridos de la ciudad, que fueron donados a los sevillanos por María Luisa Fernanda de Borbón en 1914. Un desvío de su avenida central nos lleva hasta la estatua de Bécquer, costeada por los hermanos Álvarez Quintero cediendo los derechos de author de su comedia  La rima eterna. Lo más recomendable, antes de entrar en la aledaña Plaza de España, es dejarse perder por sus laberínticos caminos, estanques, fuentes y abundante vegetación.  </string>
    <string name="datos_ubicacion6">P.º de las Delicias, s/n, 41013 Sevilla, España </string>
    <string name="datos_sitios_recomendados6">Sambo\'s Shop, Yate \"El Miarma\", The World\'s Best Spanish Omelette</string>
    <string name="Titulo7">Museo de Bellas Artes  </string>
    <string name="datos_descripcion7">El museo más relevante de Sevilla es también la segunda pinacoteca de España, con una valiosa colección de pintura de la escuela barroca (Zurbarán, Murillo y Valdés Leal), y exposiciones invitadas de envergadura. Para los residentes en la UE, la entrada es gratis. Los domingos abre, así que es un buen día para visitar el mercadillo de arte en la misma Plaza del Museo. </string>
    <string name="datos_ubicacion7">Pl. del Museo, 9, 41001 Sevilla, España </string>
    <string name="datos_sitios_recomendados7">Bar Iscariote,  Bistro Los Tulipanes, La Chalá</string>
    <string name="Titulo8">La Catedral  </string>
    <string name="datos_descripcion8">El mayor templo gótico del mundo se alza en el corazón del casco histórico con su impresionante fachada, imponentes pórticos y un sobrecogedor interior, donde el altar mayor, escenario del baile de los seises (podrán verse de nuevo días antes de la Cuaresma), está a unos metros de la (supuesta) sepultura de Cristóbal Colón. Organiza visitas guiadas todos los días, a excepción del 1 y el 6 de enero y el 25 de diciembre. Este recorrido se realiza por Catedral gótica, las sacristías y la sala capitular renacentistas, el tesoro, la Giralda, el patio de los naranjos y la Iglesia del Salvador, ubicada en la plaza del Salvador, otra de las paradas imprescindibles de la ciudad.</string>
    <string name="datos_ubicacion8">Av. de la Constitución, s/n, 41004 Sevilla, España </string>
    <string name="datos_sitios_recomendados8">Abaceria del Postigo, Génova, Terraviva.</string>
    <string name="Titulo9">La torre de Giralda</string>
    <string name="datos_descripcion9">La majestuosa torre almohade que corona la Catedral concentra 800 años de nuestra historia. Durante muchos años dominaba el skyline de la ciudad, con sus 101 metros, récord arrebatado por la Torre Sevilla. El Giraldillo es su orgullosa veleta, cuya réplica puede admirarse en la Puerta del Principe. Estudiantes, jubilados, parados y sevillanos pagan 1,50 euros si quieren vivir la experiencia de subir a su campanario. La Girada resume a las mil maravillas muchos siglos de historia sobre su propia fisonomía. La confluencia de los diferentes estilos arquitectónicos que la caracterizan es reflejo de las culturas que habitaron Sevilla. El resultado, ecléctico y singular, fascina a cualquier viajero. </string>
    <string name="datos_ubicacion9">Av. de la Constitución, s/n, 41004 Sevilla, España </string>
    <string name="datos_sitios_recomendados9">Marisqueira UMA Sevilla, Maestro Marcelino, Osteria L´Oca Giuliva</string>
    <string name="datos_ubicacion10">La plaza de toros de la Maestranza se encuentra en el barrio del Arenal de Sevilla, Andalucía, España.</string>
    <string name="Titulo10">Plaza de toros de la Maestranza "</string>
    <string name="datos_descripcion10">La Real Plaza de Toros de la Maestranza comienza cada año su temporada taurina el Domingo de Resurrección, día que coincide con el inicio de la Feria de Abril de Sevilla, y termina en septiembre-octubre. Los precios de las entradas oscilan entre los 25 euros, de la localidad al sol,hasta los 250 euros, dependiendo de la temporada y la corrida.  Este santuario taurino es un coso por el que han desfilado todos los grandes nombres del toreo. Juan Belmonte, Manolete o José Tomás entre los mejores célebres, sin olvidar a toreros que triunfaron como Curro Romero, Ordóñez, Rafael de Paula, Morante de la Puebla, Espartaco, etc.</string>
    <string name="datos_sitios_recomendados10"><![CDATA[Restaurante Las Lapas, Heladería Puro & Bio Sevilla]]></string>
    <string name="Titulo11">Isla de la Cartuja</string>
    <string name="datos_descripcion11">La Isla de la Cartuja, situada en la orilla oeste del río Guadalquivir, fue la sede de la Exposición Universal de Sevilla de 1992 y actualmente, es un importante Parque tecnológico. El Ayuntamiento de la ciudad y un conjunto de entes públicos y privados están trabajando para que sea zona totalmente sostenible a corto plazo. En esta isla creada para la Exposición Universal del 92 se encuentra uno de los espacios culturales más importantes de la ciudad, el Centro Andaluz de Arte Contemporáneo, que ocupa el antiguo Monasterio de la Cartuja. </string>
    <string name="datos_ubicacion11">La isla de la Cartuja es un terreno de la ciudad de Sevilla situado entre dos brazos del río Guadalquivir, uno río vivo y el otro una dársena. "</string>
    <string name="datos_sitios_recomendados11">Alcázar - Andalusí Tapas, La Cocina de Beatriz, Bar Kebab Traviesa</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Titulo_sivilla">Ciudad de sevilla, España</string>
    <string name="datos_temperatura_sevilla">Los veranos suelen ser secos el termómetro se sitúa por encima de los 30 grados centígrados.</string>
    <string name="datos_sitios_recomendados_sevilla">Museo de Bellas Artes, la Catedral, la Plaza de España, la Torre del Oro.</string>
    <string name="datos_ubicacion_sevilla">Sevilla está situada al SO de la Península Ibérica, en el centro de la Comunidad Autónoma de Andalucía en España.</string>
    <string name="datos_descripcion_sevilla">Sevilla está íntimamente ligada a su papel en la historia y a un patrimonio cultural enorme. Pero desde hace unos años tambié ha sabido transformarse y combinar a la perfección todo el valor de la tradición con importantes dosis de frescura e innovación; algo que no le impide mantener su personalidad, su alegría, su hospitalidad para el visitante.</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>