<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity10">

    <TextView
        android:id="@+id/textView_plaza_toros1"
        style="@style/Texto_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Titulo10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_plaza_toros"
        android:layout_width="340dp"
        android:layout_height="239dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros1"
        app:srcCompat="@drawable/plaza_toros"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView_plaza_toros2"
        style="@style/Texto_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_plaza_toros"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_plaza_toros3"
        style="@style/Texto_Normal"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/datos_descripcion10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_plaza_toros4"
        style="@style/Texto_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_plaza_toros5"
        style="@style/Texto_Normal"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/datos_ubicacion10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_plaza_toros6"
        style="@style/Texto_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_plaza_toros7"
        style="@style/Texto_Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/datos_temperatura3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros6"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Texto_titulo"
        android:id="@+id/textView_plaza_toros8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sitios_recomendados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros7" />

    <TextView
        style="@style/Texto_Normal"
        android:id="@+id/textView_plaza_toros9"
        android:layout_width="321dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:text="@string/datos_sitios_recomendados10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_plaza_toros8" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>